# smart_panel

./: sdkconfig  sdkconfig.old
components/qmsd_api/: CMakeLists.txt
components/qmsd_api/include/: qmsd_api.h  qmsd_wifi.h
components/qmsd_api/src/: qmsd_http_server.c  qmsd_nvs.c  qmsd_wifi.c
components/qmsd_ui/res/: imgaaa_png.c  imgbbb_png.c  imgerror_png.c  imgimg_cir_bottom_png.c  imgimg_left_light_png.c  imgimg_light_left_png.c  imgimg_light_png.c  imgimg_load_png.c  imgimg_up_line_png.c  imginstructions_png.c  imglight_round_png.c
components/qmsd_ui/ui/: qmsd_ui_entry.c  qmsd_ui_entry.h  screen_main.c
main/: CMakeLists.txt  Kconfig  main.c
main/net_auth/: net_auth.c  net_auth.h
